worked on marketplace visual. ran into temp roadblock.

--- a/code/capstone-v1-mb.ipynb
+++ b/code/capstone-v1-mb.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Code modified and fixed from Stock Technical Analysis with Python\n",
@@ -13,14 +11,15 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import talib as ta\n",
-    "import numpy as np\n",
-    "import plotly.plotly as py"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"./coinbaseBTCUSD_1min_2014-12-01_to_2017-10-20.csv\")\n",
@@ -33,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df['1-1-2017':].copy()"
@@ -472,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bins = [0, 1000, 2000, 3000, 5000]\n",
@@ -546,7 +549,9 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hr_df['returns'] = hr_df.close / hr_df.close.shift(1) - 1"
@@ -593,7 +598,9 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"./coinbaseBTCUSD-withsignals-2hr.csv\")\n",
@@ -724,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
